--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\" \"cd ../backend && npm start\""
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
